--- a/sass/main.css
+++ b/sass/main.css
@@ -2,14 +2,13 @@
 header {
   width: 100%;
   height: 15vh;
-  /*  background: linear-gradient(to bottom,
-            rgba(247, 143, 119, 0.6),
-            rgba(29, 241, 171, .6),
-            rgba(7, 109, 150, .45)), url(../media/fondo3.jpg);
-    background-attachment: fixed;
-    background-position: center;
-    background-size: cover; */
   background-color: #f9e9e9;
+}
+
+@media screen and (max-width: 768px) {
+  header {
+    height: 20vh;
+  }
 }
 
 .navegador {
@@ -17,7 +16,7 @@ header {
   -webkit-box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
           box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
   position: fixed;
-  z-index: 1;
+  z-index: 5;
   background: -webkit-gradient(linear, left top, left bottom, from(rgba(247, 143, 119, 0.6)), color-stop(rgba(29, 241, 171, 0.6)), to(rgba(7, 109, 150, 0.45))), url(../media/fondo3.jpg);
   background: linear-gradient(to bottom, rgba(247, 143, 119, 0.6), rgba(29, 241, 171, 0.6), rgba(7, 109, 150, 0.45)), url(../media/fondo3.jpg);
   background-attachment: fixed;
@@ -393,6 +392,7 @@ footer {
 @media screen and (max-width: 768px) {
   .hero {
     height: 95vh;
+    margin-top: 20px;
   }
 }
 
@@ -424,10 +424,6 @@ footer {
   .video {
     width: 300%;
   }
-}
-
-.asd {
-  display: none;
 }
 
 .contenedor-slider {
@@ -991,7 +987,7 @@ footer {
 }
 
 .banner {
-  margin-bottom: 10px;
+  margin: 20px 0;
   border-radius: 5px;
   padding: 10px;
   display: -webkit-box;
@@ -1065,39 +1061,43 @@ footer {
 .muestrario {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (1fr)[3];
-      grid-template-columns: repeat(3, 1fr);
-  -ms-grid-rows: (1fr)[3];
-      grid-template-rows: repeat(3, 1fr);
+  -ms-grid-columns: 1fr, 1fr, 1fr;
+      grid-template-columns: 1fr, 1fr, 1fr;
+  -ms-grid-rows: 1fr, 1fr;
+      grid-template-rows: 1fr, 1fr;
+  grid-column-gap: 20px;
+  grid-row-gap: 50px;
 }
 
 @media screen and (max-width: 768px) {
   .muestrario {
     display: -ms-grid;
     display: grid;
-    -ms-grid-columns: (1fr)[2];
-        grid-template-columns: repeat(2, 1fr);
-    -ms-grid-rows: (1fr)[5];
-        grid-template-rows: repeat(5, 1fr);
-    grid-column-gap: 0px;
+    -ms-grid-columns: 1fr, 1fr, 1fr;
+        grid-template-columns: 1fr, 1fr, 1fr;
+    -ms-grid-rows: 1fr, 1fr;
+        grid-template-rows: 1fr, 1fr;
+    grid-column-gap: 10px;
     grid-row-gap: 10px;
   }
 }
 
 @media screen and (min-width: 320px) and (max-width: 480px) {
   .muestrario {
-    display: -ms-grid;
-    display: grid;
-    -ms-grid-columns: (1fr)[2];
-        grid-template-columns: repeat(2, 1fr);
-    -ms-grid-rows: (1fr)[3];
-        grid-template-rows: repeat(3, 1fr);
-    grid-column-gap: 0px;
-    grid-row-gap: 10px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
 }
 
-.muestrario__img1 {
+.muestrario__img {
   -ms-grid-row: 1;
   -ms-grid-row-span: 1;
   -ms-grid-column: 1;
@@ -1105,24 +1105,12 @@ footer {
   grid-area: 1 / 1 / 2 / 2;
 }
 
-@media screen and (max-width: 768px) {
-  .muestrario__img1 {
-    -ms-grid-row: 1;
-    -ms-grid-row-span: 1;
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 1;
-    grid-area: 1 / 1 / 2 / 2;
-  }
-}
-
-@media screen and (min-width: 320px) and (max-width: 480px) {
-  .muestrario__img1 {
-    -ms-grid-row: 1;
-    -ms-grid-row-span: 1;
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 1;
-    grid-area: 1 / 1 / 2 / 2;
-  }
+.muestrario__text {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-area: 1 / 2 / 2 / 3;
 }
 
 .muestrario__img2 {
@@ -1131,29 +1119,24 @@ footer {
   -ms-grid-column: 3;
   -ms-grid-column-span: 1;
   grid-area: 1 / 3 / 2 / 4;
-}
-
-@media screen and (max-width: 768px) {
-  .muestrario__img2 {
-    -ms-grid-row: 2;
-    -ms-grid-row-span: 1;
-    -ms-grid-column: 2;
-    -ms-grid-column-span: 1;
-    grid-area: 2 / 2 / 3 / 3;
-  }
-}
-
-@media screen and (min-width: 320px) and (max-width: 480px) {
-  .muestrario__img2 {
-    -ms-grid-row: 2;
-    -ms-grid-row-span: 1;
-    -ms-grid-column: 2;
-    -ms-grid-column-span: 1;
-    grid-area: 2 / 2 / 3 / 3;
-  }
+  margin-top: 50px;
 }
 
 .muestrario__img3 {
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-area: 2 / 1 / 3 / 2;
+}
+
+@media screen and (min-width: 320px) and (max-width: 480px) {
+  .muestrario__img3 {
+    display: none;
+  }
+}
+
+.muestrario__text2 {
   -ms-grid-row: 2;
   -ms-grid-row-span: 1;
   -ms-grid-column: 2;
@@ -1161,92 +1144,33 @@ footer {
   grid-area: 2 / 2 / 3 / 3;
 }
 
-@media screen and (max-width: 768px) {
-  .muestrario__img3 {
-    -ms-grid-row: 3;
-    -ms-grid-row-span: 1;
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 1;
-    grid-area: 3 / 1 / 4 / 2;
-  }
-}
-
-@media screen and (min-width: 320px) and (max-width: 480px) {
-  .muestrario__img3 {
-    -ms-grid-row: 3;
-    -ms-grid-row-span: 1;
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 1;
-    grid-area: 3 / 1 / 4 / 2;
-  }
-}
-
 .muestrario__img4 {
-  -ms-grid-row: 3;
-  -ms-grid-row-span: 1;
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 1;
-  grid-area: 3 / 1 / 4 / 2;
-}
-
-@media screen and (max-width: 768px) {
-  .muestrario__img4 {
-    -ms-grid-row: 4;
-    -ms-grid-row-span: 1;
-    -ms-grid-column: 2;
-    -ms-grid-column-span: 1;
-    grid-area: 4 / 2 / 5 / 3;
-  }
-}
-
-@media screen and (min-width: 320px) and (max-width: 480px) {
-  .muestrario__img4 {
-    display: none;
-  }
-}
-
-.muestrario__img5 {
-  -ms-grid-row: 3;
+  -ms-grid-row: 2;
   -ms-grid-row-span: 1;
   -ms-grid-column: 3;
   -ms-grid-column-span: 1;
-  grid-area: 3 / 3 / 4 / 4;
+  grid-area: 2 / 3 / 3 / 4;
+  margin-top: 50px;
 }
 
-@media screen and (max-width: 768px) {
-  .muestrario__img5 {
-    -ms-grid-row: 5;
-    -ms-grid-row-span: 1;
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 1;
-    grid-area: 5 / 1 / 6 / 2;
-  }
-}
-
-@media screen and (min-width: 320px) and (max-width: 480px) {
-  .muestrario__img5 {
-    display: none;
-  }
-}
-
-.muestrario__img1, .muestrario__img2, .muestrario__img3, .muestrario__img4, .muestrario__img5 {
+.muestrario__img, .muestrario__img2, .muestrario__img3, .muestrario__img4 {
   width: 400px;
   -webkit-box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.5);
           box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.5);
-  height: 300px;
-  margin: 20px 0;
+  height: 400px;
 }
 
 @media screen and (max-width: 768px) {
-  .muestrario__img1, .muestrario__img2, .muestrario__img3, .muestrario__img4, .muestrario__img5 {
-    width: 330px;
+  .muestrario__img, .muestrario__img2, .muestrario__img3, .muestrario__img4 {
+    width: 200px;
   }
 }
 
 @media screen and (min-width: 320px) and (max-width: 480px) {
-  .muestrario__img1, .muestrario__img2, .muestrario__img3, .muestrario__img4, .muestrario__img5 {
-    height: 250px;
-    width: 140px;
+  .muestrario__img, .muestrario__img2, .muestrario__img3, .muestrario__img4 {
+    height: 200px;
+    width: 150px;
+    margin: 0;
   }
 }
 
@@ -1257,10 +1181,54 @@ footer {
      object-fit: cover;
 }
 
+.muestrario__text, .muestrario__text2 {
+  text-align: center;
+  padding-top: 80px;
+}
+
+@media screen and (max-width: 768px) {
+  .muestrario__text, .muestrario__text2 {
+    padding-top: 50px;
+  }
+}
+
+@media screen and (min-width: 320px) and (max-width: 480px) {
+  .muestrario__text, .muestrario__text2 {
+    padding-top: 5px;
+  }
+}
+
+.muestrario p {
+  font-size: 1.3rem;
+}
+
+@media screen and (max-width: 768px) {
+  .muestrario p {
+    font-size: 1.1rem;
+  }
+}
+
+.muestrario ul {
+  font-size: 1.3rem;
+  list-style: none;
+}
+
+@media screen and (max-width: 768px) {
+  .muestrario ul {
+    font-size: 1.1rem;
+  }
+}
+
 .contacto {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  display: -ms-grid;
+  display: grid;
+  grid-auto-columns: 1fr;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+  -ms-grid-rows: (1fr)[2];
+      grid-template-rows: repeat(2, 1fr);
+      grid-template-areas: "contac ubic" "img ubic";
+  height: 105vh;
 }
 
 @media screen and (max-width: 768px) {
@@ -1268,12 +1236,9 @@ footer {
     display: -webkit-inline-box;
     display: -ms-inline-flexbox;
     display: inline-flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
+    height: 100%;
   }
 }
 
@@ -1293,7 +1258,10 @@ footer {
 }
 
 .contacto__form {
-  height: 80%;
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  grid-area: contac;
+  height: 95%;
   padding: 10px;
   -webkit-box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.5);
           box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.5);
@@ -1320,28 +1288,65 @@ footer {
   }
 }
 
-.contacto__boton {
-  border-radius: 20px;
+.contacto .btForm {
+  margin: 10px 80px;
   height: 30px;
-  width: 150px;
-  margin-right: 10px;
-  background: #dbdfd7;
-  color: #060639;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+@media screen and (max-width: 768px) {
+  .contacto .btForm {
+    font-size: 1.1rem;
+  }
 }
 
 @media screen and (min-width: 320px) and (max-width: 480px) {
-  .contacto__boton {
+  .contacto .btForm {
     margin: 10px 0;
   }
 }
 
-.contacto__boton:hover {
-  background-color: #ebe4d6;
+.contacto .btForm:hover {
   cursor: pointer;
   font-weight: bolder;
   font-size: 1rem;
   -webkit-animation: pulsate-btnContacto 0.8s ease-in-out infinite both;
           animation: pulsate-btnContacto 0.8s ease-in-out infinite both;
+}
+
+.contacto__imagen {
+  -ms-grid-row: 2;
+  -ms-grid-column: 1;
+  grid-area: img;
+  margin-left: 10px;
+  width: 97%;
+  -webkit-box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.5);
+          box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.5);
+  height: 285px;
+  border-radius: 20px;
+}
+
+@media screen and (max-width: 768px) {
+  .contacto__imagen {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 320px) and (max-width: 480px) {
+  .contacto__imagen {
+    display: none;
+  }
+}
+
+.contacto__imagen img {
+  height: 100%;
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 10px;
+  opacity: 0.9;
 }
 
 .contacto__ubicacion {
@@ -1358,13 +1363,23 @@ footer {
   -webkit-box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.5);
           box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.5);
   border-radius: 10px;
-  margin: 10px;
+  margin-top: 10px;
   width: 700px;
+  height: 95%;
   padding: 10px;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
+  -ms-grid-column: 2;
+  grid-area: ubic;
 }
 
-.contacto__ubicacion h2 {
-  text-align: center;
+@media screen and (max-width: 768px) {
+  .contacto__ubicacion {
+    height: 100%;
+    margin-bottom: 10px;
+    margin-left: 10px;
+    width: 700px;
+  }
 }
 
 @media screen and (min-width: 320px) and (max-width: 480px) {
@@ -1372,6 +1387,10 @@ footer {
     width: 100%;
     margin: 20px 0;
   }
+}
+
+.contacto__ubicacion h2 {
+  text-align: center;
 }
 
 .contacto__ubicacion--cont {
