--- a/sass/parciales/_footerYheader.scss
+++ b/sass/parciales/_footerYheader.scss
@@ -9,16 +9,11 @@ $fuentePrincipal:'Play',sans-serif;
 header {
     width: 100%;
     height: 15vh;
-   /*  background: linear-gradient(to bottom,
-            rgba(247, 143, 119, 0.6),
-            rgba(29, 241, 171, .6),
-            rgba(7, 109, 150, .45)), url(../media/fondo3.jpg);
-    background-attachment: fixed;
-    background-position: center;
-    background-size: cover; */
+    background-color: rgb(249, 233, 233);  
 
-    background-color: rgb(249, 233, 233);
-   
+    @include tablet{
+        height: 20vh;
+    }
      
     
 }
@@ -27,7 +22,7 @@ header {
     width: 100%;
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, .5);
     position: fixed;
-    z-index: 1;
+    z-index: 5;
     background: linear-gradient(to bottom,
             rgba(247, 143, 119, 0.6),
             rgba(29, 241, 171, .6),
