--- a/sass/parciales/_nosotros.scss
+++ b/sass/parciales/_nosotros.scss
@@ -7,7 +7,7 @@ $borde: 20px;
 
 
 .banner {
-    margin-bottom: 10px;
+    margin: 20px 0;
     border-radius: $borde/4;
     padding: 10px;
     display: flex;
@@ -59,108 +59,79 @@ $borde: 20px;
     }
 }
 
-
 .muestrario {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: 1fr, 1fr, 1fr;
+    grid-template-rows: 1fr, 1fr;
+    grid-column-gap: 20px;
+    grid-row-gap: 50px;
 
-    @include tablet {
+
+    @include tablet{
         display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(5, 1fr);
-        grid-column-gap: 0px;
-        grid-row-gap: 10px;
-
+    grid-template-columns: 1fr, 1fr, 1fr;
+    grid-template-rows: 1fr, 1fr;
+        grid-column-gap: 10px;
+    grid-row-gap: 10px;
     }
 
-    @include movil {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(3, 1fr);
-        grid-column-gap: 0px;
-        grid-row-gap: 10px;
+    @include movil{
+        display:flex;
+        flex-direction:column;
+        align-items:center;
     }
 
 
-    &__img1 {
+    &__img {
         grid-area: 1 / 1 / 2 / 2;
+    }
 
-        @include tablet {
-            grid-area: 1 / 1 / 2 / 2;
-        }
-
-        @include movil {
-            grid-area: 1 / 1 / 2 / 2;
-        }
-
+    &__text {
+        grid-area: 1 / 2 / 2 / 3;
     }
 
     &__img2 {
         grid-area: 1 / 3 / 2 / 4;
-
-        @include tablet {
-            grid-area: 2 / 2 / 3 / 3;
-        }
-
-        @include movil {
-            grid-area: 2 / 2 / 3 / 3;
-        }
+        margin-top: 50px;
     }
 
     &__img3 {
+        grid-area: 2 / 1 / 3 / 2;
+        @include movil{
+            display: none;
+        }
+    }
+
+    &__text2 {
         grid-area: 2 / 2 / 3 / 3;
-
-        @include tablet {
-            grid-area: 3 / 1 / 4 / 2;
-        }
-
-        @include movil {
-            grid-area: 3 / 1 / 4 / 2;
-        }
     }
 
     &__img4 {
-        grid-area: 3 / 1 / 4 / 2;
+        grid-area: 2 / 3 / 3 / 4;
+        margin-top: 50px;
 
-        @include tablet {
-            grid-area: 4 / 2 / 5 / 3;
-        }
-
-        @include movil {
-            display: none;
-        }
+        
     }
 
-    &__img5 {
-        grid-area: 3 / 3 / 4 / 4;
 
-        @include tablet {
-            grid-area: 5 / 1 / 6 / 2;
-        }
 
-        @include movil {
-            display: none;
-        }
-    }
-
-    &__img1,
+    &__img,
     &__img2,
     &__img3,
-    &__img4,
-    &__img5 {
+    &__img4
+        {
         width: 400px;
         box-shadow: $sombreado;
-        height: 300px;
-        margin: 20px 0;
+        height: 400px;
 
         @include tablet {
-            width: 330px;
+            width: 200px;
         }
 
         @include movil {
-            height: 250px;
-            width: 140px;
+            height: 200px;
+            width: 150px;
+            margin: 0;
         }
 
     }
@@ -173,4 +144,38 @@ $borde: 20px;
 
     }
 
+    &__text,
+    &__text2 {
+        text-align: center;
+        padding-top: 80px;
+
+        @include tablet{
+            padding-top: 50px;
+        }
+
+        @include movil{
+            padding-top: 5px;
+        }
+
+       
+    }
+
+
+    p{
+        font-size: 1.3rem;
+        @include tablet{
+            font-size: 1.1rem;
+        }
+    }
+
+    ul{
+        font-size: 1.3rem;
+        list-style: none;
+        @include tablet{
+            font-size: 1.1rem;
+        }
+    }
+
 }
+
+
