--- a/sass/parciales/_principal.scss
+++ b/sass/parciales/_principal.scss
@@ -61,6 +61,10 @@
         width: 90%;
         height: 30rem;
         object-fit: cover;
+
+        @include movil{
+            width: 100%;
+        }
     }
 
   
@@ -70,6 +74,10 @@
 
     height: 80px;
     overflow: hidden;
+
+    @include movil{
+        height: 90px;
+    }
 
 
 }
