--- a/sass/main.css
+++ b/sass/main.css
@@ -1,19 +1,20 @@
 /*----------HEADER--------*/
 header {
   width: 100%;
-  height: 15vh;
+  height: 10vh;
   background-color: #f9e9e9;
 }
 
 @media screen and (max-width: 768px) {
   header {
-    height: 20vh;
+    height: 15vh;
   }
 }
 
 @media screen and (min-width: 320px) and (max-width: 480px) {
   header {
-    height: 15vh;
+    background-color: blue;
+    height: 11vh;
   }
 }
 
@@ -107,7 +108,7 @@ footer {
   background-position: center;
   background-size: cover;
   padding-top: 5px;
-  height: 36vh;
+  height: 100%;
 }
 
 @media screen and (max-width: 768px) {
@@ -392,14 +393,6 @@ footer {
 /*-----------PRINCIPAL-----------*/
 .hero {
   width: 100%;
-  height: 90vh;
-}
-
-@media screen and (max-width: 768px) {
-  .hero {
-    height: 95vh;
-    margin-top: 20px;
-  }
 }
 
 .contenido__video {
@@ -422,13 +415,15 @@ footer {
 
 @media screen and (max-width: 768px) {
   .video {
-    width: 130%;
+    margin-top: 100px;
+    width: 150%;
   }
 }
 
 @media screen and (min-width: 320px) and (max-width: 480px) {
   .video {
-    width: 300%;
+    margin-top: 90px;
+    width: 350%;
   }
 }
 
@@ -443,8 +438,8 @@ footer {
 
 @media screen and (max-width: 768px) {
   .contenedor-slider {
-    margin-top: 10px;
-    height: 80vh;
+    margin-top: 20px;
+    height: 100%;
     margin-bottom: 5px;
   }
 }
@@ -469,7 +464,7 @@ footer {
 
 @media screen and (min-width: 320px) and (max-width: 480px) {
   .wave {
-    height: 90px;
+    height: 50px;
   }
 }
 
@@ -519,9 +514,9 @@ footer {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
 }
@@ -547,11 +542,13 @@ footer {
 
 .grilla__catalogoPrin--img {
   border-radius: 50px;
-  margin-right: 30px;
+  width: 30vh;
   height: 200px;
   margin-bottom: 50px;
   -webkit-box-shadow: 1px 2px 10px 1px rgba(242, 161, 161, 0.89);
           box-shadow: 1px 2px 10px 1px rgba(242, 161, 161, 0.89);
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 @media screen and (min-width: 320px) and (max-width: 480px) {
@@ -681,13 +678,24 @@ footer {
 
 @media screen and (max-width: 768px) {
   .btn {
-    font-size: 1.8rem;
+    font-size: 1.5rem;
     margin-left: 80px;
   }
 }
 
 @media screen and (min-width: 320px) and (max-width: 480px) {
   .btn {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 150px;
     font-size: 1rem;
   }
 }
@@ -706,23 +714,29 @@ footer {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
 }
 
 .galeria__contVideo {
-  padding: 10px 0;
-  margin-left: 120px;
+  margin: 10px 0;
+}
+
+@media screen and (max-width: 768px) {
+  .galeria__contVideo {
+    margin-left: 12vh;
+  }
 }
 
 @media screen and (min-width: 320px) and (max-width: 480px) {
   .galeria__contVideo {
-    margin-left: 10px;
+    margin-left: 15px;
   }
 }
 
 .galeria__contVideo--video {
-  padding-right: 50px;
+  padding-right: 20px;
   height: 320px;
   -webkit-animation: fade-in-fwd 1.5s cubic-bezier(0.39, 0.575, 0.565, 1) 2.5s both;
           animation: fade-in-fwd 1.5s cubic-bezier(0.39, 0.575, 0.565, 1) 2.5s both;
@@ -731,7 +745,6 @@ footer {
 @media screen and (min-width: 320px) and (max-width: 480px) {
   .galeria__contVideo--video {
     height: 10rem;
-    margin-left: 40px;
   }
 }
 
@@ -741,7 +754,7 @@ footer {
   -webkit-box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.5);
           box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.5);
   height: 300px;
-  margin-bottom: 60px;
+  margin: 20px 10px;
 }
 
 @media screen and (min-width: 320px) and (max-width: 480px) {
@@ -773,7 +786,7 @@ footer {
   -webkit-box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.5);
           box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.5);
   height: 300px;
-  margin-bottom: 60px;
+  margin: 20px 10px;
 }
 
 @media screen and (min-width: 320px) and (max-width: 480px) {
@@ -1246,14 +1259,18 @@ footer {
   -ms-grid-rows: (1fr)[2];
       grid-template-rows: repeat(2, 1fr);
       grid-template-areas: "contac ubic" "img ubic";
-  height: 105vh;
+  height: 75vh;
 }
 
 @media screen and (max-width: 768px) {
   .contacto {
-    display: -webkit-inline-box;
-    display: -ms-inline-flexbox;
-    display: inline-flex;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
     height: 100%;
@@ -1262,9 +1279,9 @@ footer {
 
 @media screen and (min-width: 320px) and (max-width: 480px) {
   .contacto {
-    display: -webkit-inline-box;
-    display: -ms-inline-flexbox;
-    display: inline-flex;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
@@ -1279,7 +1296,7 @@ footer {
   -ms-grid-row: 1;
   -ms-grid-column: 1;
   grid-area: contac;
-  height: 95%;
+  height: 40vh;
   padding: 10px;
   -webkit-box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.5);
           box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.5);
@@ -1292,6 +1309,8 @@ footer {
 
 @media screen and (max-width: 768px) {
   .contacto__form {
+    width: 100%;
+    height: 100%;
     font-size: 1.3rem;
     text-align: center;
   }
@@ -1300,7 +1319,6 @@ footer {
 @media screen and (min-width: 320px) and (max-width: 480px) {
   .contacto__form {
     font-size: 1rem;
-    width: 100%;
     margin: 0;
     text-align: center;
   }
@@ -1316,13 +1334,25 @@ footer {
 
 @media screen and (max-width: 768px) {
   .contacto .btForm {
-    font-size: 1.1rem;
+    height: 50px;
+    font-size: 1.2rem;
   }
 }
 
 @media screen and (min-width: 320px) and (max-width: 480px) {
   .contacto .btForm {
-    margin: 10px 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    height: 30px;
+    font-size: 1rem;
   }
 }
 
@@ -1342,7 +1372,7 @@ footer {
   width: 97%;
   -webkit-box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.5);
           box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.5);
-  height: 285px;
+  height: 30vh;
   border-radius: 20px;
 }
 
@@ -1382,8 +1412,8 @@ footer {
           box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.5);
   border-radius: 10px;
   margin-top: 10px;
-  width: 700px;
-  height: 95%;
+  width: 95%;
+  height: 71vh;
   padding: 10px;
   -ms-grid-row: 1;
   -ms-grid-row-span: 2;
@@ -1396,13 +1426,12 @@ footer {
     height: 100%;
     margin-bottom: 10px;
     margin-left: 10px;
-    width: 700px;
+    width: 100%;
   }
 }
 
 @media screen and (min-width: 320px) and (max-width: 480px) {
   .contacto__ubicacion {
-    width: 100%;
     margin: 20px 0;
   }
 }
@@ -1782,8 +1811,8 @@ body ul {
     transform-origin: 50% 16%;
   }
   100% {
-    -webkit-transform: scale(1.15) translateY(-15px);
-    transform: scale(1.15) translateY(-15px);
+    -webkit-transform: scale(1.1) translateY(-15px);
+    transform: scale(1.1) translateY(-15px);
     -webkit-transform-origin: top;
     transform-origin: top;
   }
@@ -1796,8 +1825,8 @@ body ul {
     transform-origin: 50% 16%;
   }
   100% {
-    -webkit-transform: scale(1.15) translateY(-15px);
-    transform: scale(1.15) translateY(-15px);
+    -webkit-transform: scale(1.1) translateY(-15px);
+    transform: scale(1.1) translateY(-15px);
     -webkit-transform-origin: top;
     transform-origin: top;
   }
