--- a/sass/parciales/_contacto.scss
+++ b/sass/parciales/_contacto.scss
@@ -11,16 +11,17 @@ $ancho: 1400px;
     grid-template-areas:
         "contac ubic"
         "img ubic";
-    height: 105vh;
+    height: 75vh;
 
     @include tablet {
-        display: inline-flex;
+        display: flex;        
+        flex-direction: column;
         flex-wrap: wrap;
         height: 100%;
     }
 
     @include movil {
-        display: inline-flex;
+        display: flex;
         flex-direction: column;
         flex-wrap: wrap;
         padding: 0;
@@ -29,7 +30,7 @@ $ancho: 1400px;
 
     &__form {
         grid-area: contac;
-        height: 95%;
+        height: 40vh;
         padding: 10px;
         box-shadow: $sombreado;
         color: rgb(22, 22, 143);
@@ -39,6 +40,9 @@ $ancho: 1400px;
         border-radius: $borde/4;
 
         @include tablet {
+            
+            width: 100%;
+            height: 100%;
             font-size: 1.3rem;
             text-align: center;
 
@@ -46,7 +50,6 @@ $ancho: 1400px;
 
         @include movil {
             font-size: 1rem;
-            width: 100%;
             margin: 0;
             text-align: center;
         }
@@ -60,12 +63,16 @@ $ancho: 1400px;
         align-items: center;
 
         @include tablet {
-            font-size: 1.1rem;
+            height: 50px;
+            font-size: 1.2rem;
         }
 
         @include movil {
-
-            margin: 10px 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            height: 30px;
+            font-size: 1rem;
         }
 
         &:hover {
@@ -81,7 +88,7 @@ $ancho: 1400px;
         margin-left: 10px;
         width: 97%;
         box-shadow: $sombreado;
-        height: 285px;
+        height: 30vh;
         border-radius: 20px;
 
 
@@ -110,8 +117,8 @@ $ancho: 1400px;
         box-shadow: $sombreado;
         border-radius: $borde/2;
         margin-top: 10px;
-        width: $ancho/2;
-        height: 95%;
+        width: 95%;
+        height: 71vh;
         padding: 10px;
         grid-area: ubic;
 
@@ -120,11 +127,10 @@ $ancho: 1400px;
             height: 100%;
             margin-bottom: 10px;
             margin-left: 10px;
-            width: $ancho/2;
+            width: 100%;
         }
 
         @include movil {
-            width: 100%;
             margin: 20px 0;
         }
 
