--- a/sass/parciales/_principal.scss
+++ b/sass/parciales/_principal.scss
@@ -6,12 +6,9 @@
 
  .hero {
     width: 100%;
-    height: 90vh;
 
-    @include tablet {
-        height: 95vh;
-        margin-top: 20px;
-    }
+   
+    
 }
  
  .contenido__video{
@@ -33,12 +30,16 @@
     opacity: 0.8;
     
     @include tablet{
-        width: 130%;
+        margin-top: 100px;
+        width: 150%;
     }    
    
     @include movil{
-        width: 300%;
+        margin-top: 90px;
+        width: 350%;
     }   
+
+
 
    }
 
@@ -50,8 +51,8 @@
     box-shadow: $sombreado;
 
     @include tablet {
-        margin-top: 10px;
-        height: 80vh;
+        margin-top: 20px;
+        height: 100%;
         margin-bottom: 5px;
     }
 }
@@ -76,7 +77,7 @@
     overflow: hidden;
 
     @include movil{
-        height: 90px;
+        height: 50px;
     }
 
 
@@ -117,7 +118,7 @@
     &__catalogoPrin {
         padding: 10px;
         display: flex;
-        justify-content: center;
+        justify-content: space-evenly;
         flex-wrap: wrap;
 
 
@@ -133,10 +134,11 @@
         &--img {
 
             border-radius: $borde+30;
-            margin-right: 30px;
+            width: 30vh;
             height: 200px;
             margin-bottom: 50px;
             box-shadow: 1px 2px 10px 1px rgba(242, 161, 161, 0.89);
+            object-fit: cover;
 
             @include movil {
                 width: 100%;
