--- a/sass/parciales/_productos.scss
+++ b/sass/parciales/_productos.scss
@@ -6,11 +6,15 @@
     margin-left: 250px;
 
     @include tablet {
-        font-size: 1.8rem;
+        font-size: 1.5rem;
         margin-left: 80px;
     }
 
     @include movil {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 150px;
         font-size: 1rem;
     }
 }
@@ -28,26 +32,29 @@
 .galeria {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: space-evenly;
 
 
     &__contVideo {
-        padding: 10px 0;
-        margin-left: 120px;
+        margin: 10px 0;
+
+        @include tablet {
+            margin-left: 12vh;
+        }
 
         @include movil {
-            margin-left: 10px;
+            margin-left: 15px;
         }
 
         &--video {
-            padding-right: 50px;
+            padding-right: 20px;
             height: 320px;
             animation: fade-in-fwd 1.5s cubic-bezier(0.390, 0.575, 0.565, 1.000) 2.5s both;
 
 
+
             @include movil {
                 height: 10rem;
-                margin-left: 40px;
 
             }
         }
@@ -60,40 +67,10 @@
     width: 320px;
     box-shadow: $sombreado;
     height: 300px;
-    margin-bottom: 60px;
+    margin: 20px 10px;
 
 
-    @include movil{
-        height: 200px;
-    }
-
-      &:hover {
-        animation: kenburns-top 0.5s ease-out both;
-    }  
-
-    &:hover .overlay{
-        height:100%;
-        cursor: pointer;
-    }   
-
-    
-    img {
-        height: 100%;
-        width: 100%;
-        object-fit: cover;
-    }
-
-  
-}
-
-.lentesSol {
-    position: relative;
-    width: 320px;
-    box-shadow: $sombreado;
-    height: 300px;
-    margin-bottom: 60px;
-
-    @include movil{
+    @include movil {
         height: 200px;
     }
 
@@ -101,10 +78,11 @@
         animation: kenburns-top 0.5s ease-out both;
     }
 
-    &:hover .overlay{
-        height:100%;
+    &:hover .overlay {
+        height: 100%;
         cursor: pointer;
-    } 
+    }
+
 
     img {
         height: 100%;
@@ -112,27 +90,55 @@
         object-fit: cover;
     }
 
-  
+
+}
+
+.lentesSol {
+    position: relative;
+    width: 320px;
+    box-shadow: $sombreado;
+    height: 300px;
+    margin: 20px 10px;
+
+    @include movil {
+        height: 200px;
+    }
+
+    &:hover {
+        animation: kenburns-top 0.5s ease-out both;
+    }
+
+    &:hover .overlay {
+        height: 100%;
+        cursor: pointer;
+    }
+
+    img {
+        height: 100%;
+        width: 100%;
+        object-fit: cover;
+    }
+
+
 }
 
 
-.overlay{
+.overlay {
     position: absolute;
     bottom: 0;
     left: 0;
-    background:rgba(65, 1, 58, 0.249) ;
+    background: rgba(65, 1, 58, 0.249);
     width: 100%;
     height: 0;
     overflow: hidden;
     transition: .5s ease;
 }
 
-.overlay h2{
-    color:white;
+.overlay h2 {
+    color: white;
     font-weight: 300;
-    font-size:1.5rem;
+    font-size: 1.5rem;
     position: absolute;
     top: 50%;
     left: 25%;
 }
-
