--- a/sass/main.scss
+++ b/sass/main.scss
@@ -60,6 +60,7 @@ body {
         animation: tracking-in-expand-fwd 0.8s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
 
         @include tablet {
+            margin-top: 25px;
             font-size: 2.5rem;
             animation: tracking-in-expand-fwd 0.8s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
         }
