--- a/sass/parciales/_principal.scss
+++ b/sass/parciales/_principal.scss
@@ -5,9 +5,7 @@
 
 
  .hero {
-    width: 100%;
-
-   
+    width: 100%;   
     
 }
  
@@ -31,7 +29,7 @@
     
     @include tablet{
         margin-top: 100px;
-        width: 150%;
+        width: 250%;
     }    
    
     @include movil{
@@ -51,7 +49,7 @@
     box-shadow: $sombreado;
 
     @include tablet {
-        margin-top: 20px;
+        margin-top: 50px;
         height: 100%;
         margin-bottom: 5px;
     }
@@ -158,10 +156,9 @@
         animation: color-cambio-2x 2s linear infinite alternate both;
 
         @include tablet {
-
             margin: 5px;
             padding-top: 100px;
-            height: 350px;
+            height: 40vh;
             width: 100%;
         }
 
@@ -187,8 +184,8 @@
             padding: 5px;
 
             @include tablet {
-                height: 5rem;
-                padding-left: 2.5rem;
+                height: 4rem;
+                padding-left: 2rem;
             }
 
             @include movil {
@@ -202,30 +199,43 @@
 }
 
 .marcas {
-    margin-bottom: 30px;
-
-
+    margin-bottom: 30px;    
     
-
-    @include movil {
+    @include tablet{
         display: flex;
         flex-direction: column;
+        align-items: center;
         flex-wrap: wrap;
     }
 
+  /*   @include movil {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        flex-wrap: wrap;
+    }
+ */
     &__img {
         width: 10rem;
         margin-left: 220px;
 
-        @include tablet{
-            margin-left: 80px;
+        @include tablet{ 
+            
+            display: flex;
+            flex-direction: column;
             width: 8rem;
+            
+            margin: 0 5rem ;
+            padding-top: 1rem;
         }
 
 
-        @include movil {
+        @include movil {/* 
+            display: flex;
+            flex-direction: column; */
             width: 6rem;
-            margin-left: 6rem;
+            
+            margin: 0 3rem;
             padding-top: 1rem;
         }
 
