--- a/sass/parciales/_productos.scss
+++ b/sass/parciales/_productos.scss
@@ -5,15 +5,17 @@
 .btn {
     margin-left: 250px;
 
-    @include tablet {
+    @include tablet { 
+        margin-left: 40%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center; 
+        width: 200px;
         font-size: 1.5rem;
-        margin-left: 80px;
     }
 
     @include movil {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
+        margin-left: 30%;
         width: 150px;
         font-size: 1rem;
     }
@@ -39,12 +41,12 @@
         margin: 10px 0;
 
         @include tablet {
-            margin-left: 12vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            margin: 0 0 10px 0;
         }
 
-        @include movil {
-            margin-left: 15px;
-        }
 
         &--video {
             padding-right: 20px;
@@ -52,6 +54,13 @@
             animation: fade-in-fwd 1.5s cubic-bezier(0.390, 0.575, 0.565, 1.000) 2.5s both;
 
 
+
+
+            @include tablet {
+                height: 20rem;
+                padding: 10px 0 0 0;
+
+            }
 
             @include movil {
                 height: 10rem;
