--- a/sass/main.css
+++ b/sass/main.css
@@ -338,13 +338,14 @@ footer {
 @media screen and (max-width: 768px) {
   .grillaFooter__iconos .line {
     margin: 0;
+    width: 80%;
     max-width: 500px;
   }
 }
 
 @media screen and (min-width: 320px) and (max-width: 480px) {
   .grillaFooter__iconos .line {
-    max-width: 350px;
+    max-width: 400px;
   }
 }
 
@@ -697,7 +698,7 @@ footer {
 
 @media screen and (max-width: 768px) {
   .btn {
-    margin-left: 40%;
+    margin-left: 35%;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -776,7 +777,7 @@ footer {
 
 @media screen and (min-width: 320px) and (max-width: 480px) {
   .galeria__contVideo--video {
-    height: 10rem;
+    height: 12rem;
   }
 }
 
@@ -1366,6 +1367,7 @@ footer {
 
 @media screen and (max-width: 768px) {
   .contacto .btForm {
+    margin: 10px 0 10px 180px;
     height: 50px;
     font-size: 1.2rem;
   }
@@ -1373,17 +1375,11 @@ footer {
 
 @media screen and (min-width: 320px) and (max-width: 480px) {
   .contacto .btForm {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
+    /* display: flex;
             flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    height: 30px;
+            justify-content: center; */
+    margin: 10px 0 10px 80px;
+    height: 40px;
     font-size: 1rem;
   }
 }
