--- a/sass/parciales/_contacto.scss
+++ b/sass/parciales/_contacto.scss
@@ -63,15 +63,17 @@ $ancho: 1400px;
         align-items: center;
 
         @include tablet {
+            margin: 10px 0 10px 180px;
             height: 50px;
             font-size: 1.2rem;
         }
 
         @include movil {
-            display: flex;
+            /* display: flex;
             flex-direction: column;
-            align-items: center;
-            height: 30px;
+            justify-content: center; */
+            margin: 10px 0 10px 80px;
+            height: 40px;
             font-size: 1rem;
         }
 
