--- a/sass/parciales/_principal.scss
+++ b/sass/parciales/_principal.scss
@@ -116,7 +116,7 @@
     &__catalogoPrin {
         padding: 10px;
         display: flex;
-        justify-content: space-evenly;
+        justify-content: space-around;
         flex-wrap: wrap;
 
 
