--- a/sass/main.css
+++ b/sass/main.css
@@ -834,7 +834,6 @@ footer {
 
 .lentesSol:hover .overlay {
   height: 100%;
-  cursor: pointer;
 }
 
 .lentesSol img {
@@ -859,10 +858,10 @@ footer {
 .overlay h2 {
   color: white;
   font-weight: 300;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   position: absolute;
-  top: 50%;
-  left: 25%;
+  bottom: 0;
+  left: 20%;
 }
 
 /*-------------SECCION OBRAS SOCIALES--------*/
@@ -1232,48 +1231,51 @@ footer {
      object-fit: cover;
 }
 
-.muestrario__text {
+.muestrario__text, .muestrario__text2 {
   text-align: center;
   padding-top: 80px;
 }
 
 @media screen and (max-width: 768px) {
-  .muestrario__text {
+  .muestrario__text, .muestrario__text2 {
     padding-top: 5px;
   }
 }
 
-.muestrario__text p {
+.muestrario__text p, .muestrario__text2 p {
   font-size: 1.3rem;
 }
 
 @media screen and (max-width: 768px) {
-  .muestrario__text p {
+  .muestrario__text p, .muestrario__text2 p {
     font-size: 1.1rem;
   }
 }
 
-.muestrario__text ul {
+.muestrario__text ul, .muestrario__text2 ul {
   font-size: 1.3rem;
   list-style: none;
 }
 
 @media screen and (max-width: 768px) {
-  .muestrario__text ul {
+  .muestrario__text ul, .muestrario__text2 ul {
     font-size: 1.1rem;
   }
 }
 
 .contacto {
-  display: -ms-grid;
-  display: grid;
-  grid-auto-columns: 1fr;
-  -ms-grid-columns: 1fr 1fr;
-      grid-template-columns: 1fr 1fr;
-  -ms-grid-rows: (1fr)[2];
-      grid-template-rows: repeat(2, 1fr);
-      grid-template-areas: "contac ubic" "img ubic";
-  height: 75vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 20px;
 }
 
 @media screen and (max-width: 768px) {
@@ -1307,16 +1309,13 @@ footer {
 }
 
 .contacto__form {
-  -ms-grid-row: 1;
-  -ms-grid-column: 1;
-  grid-area: contac;
-  height: 40vh;
+  height: 100%;
   padding: 10px;
   -webkit-box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.5);
           box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.5);
   color: #16168f;
   font-weight: bold;
-  width: 700px;
+  width: 933.33333px;
   margin: 10px;
   border-radius: 5px;
 }
@@ -1356,9 +1355,6 @@ footer {
 
 @media screen and (min-width: 320px) and (max-width: 480px) {
   .contacto .btForm {
-    /* display: flex;
-            flex-direction: column;
-            justify-content: center; */
     margin: 10px 0 10px 80px;
     height: 40px;
     font-size: 1rem;
@@ -1374,24 +1370,15 @@ footer {
 }
 
 .contacto__imagen {
-  -ms-grid-row: 2;
-  -ms-grid-column: 1;
-  grid-area: img;
   margin-left: 10px;
-  width: 97%;
+  width: 100%;
+  height: 25vh;
   -webkit-box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.5);
           box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.5);
-  height: 30vh;
-  border-radius: 20px;
+  border-radius: 10px;
 }
 
 @media screen and (max-width: 768px) {
-  .contacto__imagen {
-    display: none;
-  }
-}
-
-@media screen and (min-width: 320px) and (max-width: 480px) {
   .contacto__imagen {
     display: none;
   }
@@ -1403,7 +1390,7 @@ footer {
   -o-object-fit: cover;
      object-fit: cover;
   border-radius: 10px;
-  opacity: 0.9;
+  opacity: 0.75;
 }
 
 .contacto__ubicacion {
@@ -1421,13 +1408,9 @@ footer {
           box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.5);
   border-radius: 10px;
   margin-top: 10px;
-  width: 95%;
-  height: 71vh;
+  width: 933.33333px;
+  height: 100%;
   padding: 10px;
-  -ms-grid-row: 1;
-  -ms-grid-row-span: 2;
-  -ms-grid-column: 2;
-  grid-area: ubic;
 }
 
 @media screen and (max-width: 768px) {
@@ -1479,7 +1462,7 @@ footer {
   font-weight: 800;
   color: #16168f;
   text-shadow: 4px -1px 11px rgba(222, 11, 11, 0.27);
-  padding-right: 10px;
+  padding-right: 20px;
 }
 
 @media screen and (min-width: 320px) and (max-width: 480px) {
@@ -1493,12 +1476,13 @@ footer {
 .contacto__ubicacion--cont iframe {
   -webkit-box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.5);
           box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.5);
-  margin-right: 15px;
+  margin-left: 10px;
 }
 
 @media screen and (min-width: 320px) and (max-width: 480px) {
   .contacto__ubicacion--cont iframe {
     width: 100%;
+    margin: 0;
   }
 }
 
