--- a/sass/parciales/_productos.scss
+++ b/sass/parciales/_productos.scss
@@ -119,7 +119,6 @@
 
     &:hover .overlay {
         height: 100%;
-        cursor: pointer;
     }
 
     img {
@@ -146,8 +145,8 @@
 .overlay h2 {
     color: white;
     font-weight: 300;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     position: absolute;
-    top: 50%;
-    left: 25%;
+    bottom: 0;
+    left:20%;
 }
