--- a/sass/main.css
+++ b/sass/main.css
@@ -1083,6 +1083,12 @@ footer {
   height: 80px;
 }
 
+@media screen and (max-width: 1024px) {
+  .banner img {
+    height: 70px;
+  }
+}
+
 @media screen and (min-width: 320px) and (max-width: 480px) {
   .banner img {
     width: 50%;
@@ -1098,6 +1104,9 @@ footer {
   font-weight: bold;
   margin-right: 30px;
   padding: 40px 20px 0 10px;
+  /* @include laptop{
+            margin-right: 100px;
+        } */
 }
 
 @media screen and (min-width: 320px) and (max-width: 480px) {
@@ -1129,6 +1138,14 @@ footer {
       grid-template-rows: 1fr, 1fr;
   grid-column-gap: 20px;
   grid-row-gap: 50px;
+  /* 
+
+    @include laptop{
+        grid-column-gap: 10px;
+    grid-row-gap: 20px;
+
+    }
+ */
 }
 
 @media screen and (max-width: 768px) {
@@ -1207,6 +1224,9 @@ footer {
   -webkit-box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.5);
           box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.5);
   height: 400px;
+  /*  @include laptop{
+            width: 300px;
+        } */
 }
 
 @media screen and (max-width: 768px) {
