--- a/sass/parciales/_mediaqueries.scss
+++ b/sass/parciales/_mediaqueries.scss
@@ -1,3 +1,15 @@
+
+@mixin laptop {
+
+    @media screen  and (max-width: 1024px) 
+    {
+        @content;
+    }
+    
+}
+
+
+
 @mixin tablet {
 
     @media screen  and (max-width: 768px) 
