--- a/sass/main.css
+++ b/sass/main.css
@@ -215,10 +215,10 @@ footer {
   padding-left: 180px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1024px) {
   .grillaFooter__iconos img {
     height: 6rem;
-    padding-left: 100px;
+    padding-left: 70px;
   }
 }
 
@@ -412,6 +412,13 @@ footer {
   opacity: 0.8;
 }
 
+@media screen and (max-width: 1024px) {
+  .video {
+    margin-top: 100px;
+    width: 250%;
+  }
+}
+
 @media screen and (max-width: 768px) {
   .video {
     margin-top: 100px;
@@ -459,6 +466,12 @@ footer {
 .wave {
   height: 80px;
   overflow: hidden;
+}
+
+@media screen and (max-width: 1024px) {
+  .wave {
+    margin-bottom: -10px;
+  }
 }
 
 @media screen and (min-width: 320px) and (max-width: 480px) {
@@ -549,6 +562,12 @@ footer {
      object-fit: cover;
 }
 
+@media screen and (max-width: 1024px) {
+  .grilla__catalogoPrin--img {
+    margin-right: 10px;
+  }
+}
+
 @media screen and (min-width: 320px) and (max-width: 480px) {
   .grilla__catalogoPrin--img {
     width: 100%;
@@ -620,13 +639,16 @@ footer {
 
 .marcas {
   margin-bottom: 30px;
-  /*   @include movil {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
+}
+
+@media screen and (max-width: 768px) {
+  .marcas {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
         flex-wrap: wrap;
-    }
- */
+  }
 }
 
 @media screen and (max-width: 768px) {
@@ -651,6 +673,13 @@ footer {
   margin-left: 220px;
 }
 
+@media screen and (max-width: 1024px) {
+  .marcas__img {
+    width: 8rem;
+    margin-left: 150px;
+  }
+}
+
 @media screen and (max-width: 768px) {
   .marcas__img {
     display: -webkit-box;
@@ -668,9 +697,6 @@ footer {
 
 @media screen and (min-width: 320px) and (max-width: 480px) {
   .marcas__img {
-    /* 
-            display: flex;
-            flex-direction: column; */
     width: 6rem;
     margin: 0 3rem;
     padding-top: 1rem;
@@ -695,9 +721,9 @@ footer {
   margin-left: 250px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1024px) {
   .btn {
-    margin-left: 35%;
+    margin-left: 40%;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -709,7 +735,13 @@ footer {
         -ms-flex-pack: center;
             justify-content: center;
     width: 200px;
-    font-size: 1.5rem;
+    font-size: 1.3rem;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .btn {
+    margin-left: 35%;
   }
 }
 
@@ -744,7 +776,7 @@ footer {
   margin: 10px 0;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1024px) {
   .galeria__contVideo {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -767,10 +799,16 @@ footer {
           animation: fade-in-fwd 1.5s cubic-bezier(0.39, 0.575, 0.565, 1) 2.5s both;
 }
 
+@media screen and (max-width: 1024px) {
+  .galeria__contVideo--video {
+    height: 23rem;
+    padding: 10px 0 0 0;
+  }
+}
+
 @media screen and (max-width: 768px) {
   .galeria__contVideo--video {
     height: 20rem;
-    padding: 10px 0 0 0;
   }
 }
 
@@ -1005,19 +1043,15 @@ footer {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-}
-
-@media screen and (max-width: 768px) {
-  .contenedor_obrasoc {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
+  /* 
+    @include movil {
+        display: flex;
         flex-wrap: wrap;
-  }
+
+    } */
 }
 
-@media screen and (min-width: 320px) and (max-width: 480px) {
+@media screen and (max-width: 1024px) {
   .contenedor_obrasoc {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -1104,9 +1138,18 @@ footer {
   font-weight: bold;
   margin-right: 30px;
   padding: 40px 20px 0 10px;
-  /* @include laptop{
-            margin-right: 100px;
-        } */
+}
+
+@media screen and (max-width: 1024px) {
+  .banner__text {
+    margin-right: 100px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .banner__text {
+    margin-right: 30px;
+  }
 }
 
 @media screen and (min-width: 320px) and (max-width: 480px) {
@@ -1138,14 +1181,13 @@ footer {
       grid-template-rows: 1fr, 1fr;
   grid-column-gap: 20px;
   grid-row-gap: 50px;
-  /* 
+}
 
-    @include laptop{
-        grid-column-gap: 10px;
+@media screen and (max-width: 1024px) {
+  .muestrario {
+    grid-column-gap: 10px;
     grid-row-gap: 20px;
-
-    }
- */
+  }
 }
 
 @media screen and (max-width: 768px) {
@@ -1224,9 +1266,12 @@ footer {
   -webkit-box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.5);
           box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.5);
   height: 400px;
-  /*  @include laptop{
-            width: 300px;
-        } */
+}
+
+@media screen and (max-width: 1024px) {
+  .muestrario__img, .muestrario__img2, .muestrario__img3, .muestrario__img4 {
+    width: 300px;
+  }
 }
 
 @media screen and (max-width: 768px) {
@@ -1365,9 +1410,15 @@ footer {
           align-items: center;
 }
 
+@media screen and (max-width: 1024px) {
+  .contacto .btForm {
+    margin-left: 350px;
+  }
+}
+
 @media screen and (max-width: 768px) {
   .contacto .btForm {
-    margin: 10px 0 10px 180px;
+    margin: 10px 0 10px 200px;
     height: 50px;
     font-size: 1.2rem;
   }
@@ -1436,8 +1487,7 @@ footer {
 @media screen and (max-width: 768px) {
   .contacto__ubicacion {
     height: 100%;
-    margin-bottom: 10px;
-    margin-left: 10px;
+    margin: 20px 0;
     width: 100%;
   }
 }
@@ -1515,7 +1565,7 @@ body {
   overflow-x: hidden;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1024px) {
   body {
     margin: 0;
     padding: 0;
@@ -1537,7 +1587,7 @@ body main {
   padding: 0 40px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1024px) {
   body main {
     overflow-x: hidden;
     overflow-y: hidden;
@@ -1563,7 +1613,7 @@ body h1 {
           animation: tracking-in-expand-fwd 0.8s cubic-bezier(0.215, 0.61, 0.355, 1) both;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1024px) {
   body h1 {
     margin-top: 25px;
     font-size: 2.5rem;
