--- a/sass/parciales/_contacto.scss
+++ b/sass/parciales/_contacto.scss
@@ -58,8 +58,12 @@ $ancho: 1400px;
         height: 30px;
         align-items: center;
 
+        @include laptop{
+            margin-left: 350px;
+        }
+
         @include tablet {
-            margin: 10px 0 10px 180px;
+            margin: 10px 0 10px 200px;
             height: 50px;
             font-size: 1.2rem;
         }
@@ -115,8 +119,7 @@ $ancho: 1400px;
 
         @include tablet {
             height: 100%;
-            margin-bottom: 10px;
-            margin-left: 10px;
+            margin: 20px 0;
             width: 100%;
         }
 
