--- a/sass/parciales/_contacto.scss
+++ b/sass/parciales/_contacto.scss
@@ -24,7 +24,7 @@ $ancho: 1400px;
         padding: 0;
     }
 
-
+    /* form contacto*/
     &__form {
         height: 100%;
         padding: 10px;
@@ -47,14 +47,15 @@ $ancho: 1400px;
         @include movil {
             font-size: 1rem;
             margin: 0;
-            text-align: center;
         }
     }
 
-
+    /*botones*/
     .btForm {
 
-        margin: 10px 80px;
+        
+        margin-left: 250px;
+        margin-bottom: 10px;
         height: 30px;
         align-items: center;
 
@@ -81,7 +82,7 @@ $ancho: 1400px;
             animation: pulsate-btnContacto 0.8s ease-in-out infinite both;
         }
     }
-
+    /*banner imagen*/
     &__imagen {
         margin-left: 10px;
         width: 100%;
@@ -92,10 +93,7 @@ $ancho: 1400px;
 
         @include tablet {
             display: none;
-
         }
-
-
         img {
             height: 100%;
             width: 100%;
@@ -104,7 +102,7 @@ $ancho: 1400px;
             opacity: 0.75;
         }
     }
-
+    /*form ubicacion*/
     &__ubicacion {
         display: flex;
         flex-direction: column;
@@ -126,7 +124,6 @@ $ancho: 1400px;
         @include movil {
             margin: 20px 0;
         }
-
 
         h2 {
             text-align: center;
@@ -164,6 +161,10 @@ $ancho: 1400px;
             iframe {
                 box-shadow: $sombreado;
                 margin-left: 10px;
+
+                @include tablet{
+                    width: 50%;
+                }
 
                 @include movil {
                     width: 100%;
