--- a/sass/parciales/_footerYheader.scss
+++ b/sass/parciales/_footerYheader.scss
@@ -10,16 +10,10 @@ header {
     width: 100%;
     height: 10vh;
     background-color: rgb(249, 233, 233);  
-
-    @include tablet{
-        height: 10vh;
-    }
-
+    
     @include movil{
-        background-color: blue;
         height: 11vh;
-    }
-     
+    }    
     
 }
 
@@ -35,6 +29,11 @@ header {
     background-attachment: fixed;
     background-position: center;
     background-size: cover;
+}
+
+
+.navbar-toggler{
+    background-color: rgba(220, 136, 144, 0.722);
 }
 
 .navbar-brand {
@@ -88,11 +87,11 @@ header {
             }
 
             @include movil {
-                text-decoration: none;
+               /*  text-decoration: none;
                 text-align: center;
-                font-weight: bold;
+                font-weight: bold;                
+                padding-bottom: 10px; */
                 font-size: 1rem;
-                padding-bottom: 10px;
             }
         }
     }
@@ -113,20 +112,20 @@ footer {
 
 
     @include tablet {
-        height: 100%;
-        padding-top: 5px;
+        /* height: 100%;
+        padding-top: 5px; */
         overflow-x: hidden;
         overflow-y: hidden;
         border-top: tomato 2px solid;
     }
 
-    @include movil {
+   /*  @include movil {
         height: 100%;
         padding-top: 5px;
         overflow-x: hidden;
         overflow-y: hidden;
         border-top: tomato 2px solid;
-    }
+    } */
 }
 
 .grillaFooter {
@@ -165,9 +164,9 @@ footer {
                 font-weight: bold;
                 font-size: 1rem;
 
-                @include tablet {
+               /*  @include tablet {
                     font-size: 1rem;
-                }
+                } */
             }
         }
     }
@@ -184,17 +183,14 @@ footer {
             height: 6rem;
             padding-left: 180px;
 
-
-
             @include laptop {
-                height: 6rem;
+               /*  height: 6rem; */
                 padding-left: 70px;
             }
 
             @include movil {
-
                 height: 5rem;
-                padding: 0 0 0 20px;
+                padding-left: 20px;
                 margin: 10px 0;
             }
 
