--- a/sass/parciales/_principal.scss
+++ b/sass/parciales/_principal.scss
@@ -33,15 +33,14 @@
     }    
 
     @include tablet{
-        margin-top: 100px;
-        width: 250%;
+       /*  margin-top: 100px;
+        width: 250%; */
     }    
    
     @include movil{
         margin-top: 90px;
         width: 350%;
     }   
-
 
 
    }
@@ -54,7 +53,7 @@
     box-shadow: $sombreado;
 
     @include tablet {
-        margin-top: 50px;
+     /*    margin-top: 50px; */
         height: 100%;
         margin-bottom: 5px;
     }
@@ -70,7 +69,6 @@
             width: 100%;
         }
     }
-
   
 }
 
@@ -87,6 +85,10 @@
         height: 50px;
     }
 
+    &__svg{
+        height: 100%;
+        width: 100%;        
+    }
 
 }
 
@@ -99,13 +101,6 @@
     gap: 0px 10px;
     grid-template-areas: ". .";
     padding: 20px;
-
-    p {
-        @include movil {
-            text-align: center;
-            width: 100%;
-        }
-    }
 
     @include tablet {
         display: inline-flex;
@@ -120,6 +115,12 @@
 
     }
 
+    p {
+        @include movil {
+            text-align: center;
+            width: 100%;
+        }
+    }
 
 
     &__catalogoPrin {
@@ -127,8 +128,6 @@
         display: flex;
         justify-content: space-around;
         flex-wrap: wrap;
-
-
 
 
         @include movil {
@@ -179,20 +178,17 @@
 
         @include movil {
             align-items: center;
-            width: 100%;
+           /*  width: 100%; */
             height: 400px;
         }
 
 
-        &--titulo {
-            font-weight: bold;
-            text-align: center;
-        }
-
+        &--titulo,
         &--text {
             font-weight: bold;
             text-align: center;
         }
+
 
         &--img {
             height: 70px;
@@ -216,11 +212,6 @@
 .marcas {
     margin-bottom: 30px;    
 
-    @include tablet{
-        display: flex;
-        flex-wrap: wrap;
-    }
-
     
     @include tablet{
         display: flex;
@@ -235,28 +226,23 @@
 
 
         @include laptop{
-            width: 8rem;
+         width: 8rem;
          margin-left: 150px;
         }
 
         @include tablet{ 
             
             display: flex;
-            flex-direction: column;
-            width: 8rem;
-            
+            flex-direction: column;            
             margin: 0 5rem ;
             padding-top: 1rem;
         }
 
 
         @include movil {
-            width: 6rem;
-            
+            width: 6rem;            
             margin: 0 3rem;
-            padding-top: 1rem;
         }
-
     }
 
     &__text {
